test/fixtures/themes/001-deprecations/invalid/index.hbs
{{post.image}}
{{#if @blog.cover}}
    {{@blog.cover}}
{{/if}}

{{#if tag.image}}
    {{tag.image}}
{{/if}}

{{> mypartial}}
